Added remaining CRUD functions to books
